--- a/src/components/todo/Todo.scss
+++ b/src/components/todo/Todo.scss
@@ -1,5 +1,5 @@
 .todos {
-  padding: 2rem;
+  margin-block: 1rem;
   .todo {
     display: flex;
     flex-direction: column;
@@ -7,5 +7,7 @@
     border: 1px solid gray;
     border-radius: 5px;
     padding: 1rem;
+    width: 15rem;
+    background-color: rgb(243, 243, 181);
   }
 }
