Add todo form added and integrated

--- a/src/components/todo/Todo.scss
+++ b/src/components/todo/Todo.scss
@@ -1,5 +1,8 @@
 .todos {
   margin-block: 1rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
   .todo {
     display: flex;
     flex-direction: column;
